--- a/backend/login_signup_backend/.env
+++ b/backend/login_signup_backend/.env
@@ -1,4 +1,4 @@
-mongoUrl = mongodb://127.0.0.1:27017/StreamSpace?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.8.0
+mongoUrl = mongodb+srv://khidki:khidki@khidki.sczmvof.mongodb.net/StreamSpace?retryWrites=true&w=majority
 port = 8080
 accessKey = superman
 refreshKey = batman
